--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "pinia": "^2.0.23",
+    "react-dnd-html5-backend": "^16.0.1",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue3-dnd": "^2.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
